--- a/style.css
+++ b/style.css
@@ -108,6 +108,10 @@ div {
         width: 12vw;
         height: 12vw;
     }
+    div{
+        width: 10vw;
+        height: 10vw;
+    }
 
     .white-turn-text {
         font-size: 40px;
