--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    margin:auto;
+}
+
 td{
                 
     font-size: 40px;
@@ -65,8 +69,8 @@ main {
 }
 
 div {
-    display: flex;
-    justify-content: space-between;
+    display: inline-block;
+    
 }
 
 .black-piece{
@@ -94,24 +98,29 @@ div {
 }
 
 @media screen and (max-width: 560px) {
+    td {
+        width: 12vw;
+        height: 12vw;
+    }
+    th {
+        width: 12vw;
+        height: 12vw;
+    }
+    
     .white-piece {
         height: 4.5vw;
         width: 4.5vw;
+        size: 4.5vw;
     }
 
     .black-piece {
         height: 4.5vw;
         width: 4.5vw;
+        size: 4.5vw;
     }
 
-    td {
-        width: 12vw;
-        height: 12vw;
-    }
-    div {
-        width: 10vw;
-        height: 10vw;
-    }
+    
+    
 
     .white-turn-text {
         font-size: 40px;
@@ -145,5 +154,37 @@ div {
     .black-piece {
         height: 3vw;
         width: 3vw;
+    }
+}
+
+@media screen and (max-width: 345px) {
+    .white-piece {
+        height: 2.5vw;
+        width: 2.5vw;
+    }
+
+    .black-piece {
+        height: 2.5vw;
+        width: 2.5vw;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    .white-piece {
+        height: 1.5vw;
+        width: 1.5vw;
+    }
+
+    .black-piece {
+        height: 1.5vw;
+        width: 1.5vw;
+    }
+
+    .white-turn-text {
+        font-size: 35px;
+    }
+    
+    .black-turn-text {
+        font-size: 35px;
     }
 }
