--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-    margin:auto;
-}
-
 td{
                 
     font-size: 40px;
@@ -69,8 +65,8 @@ main {
 }
 
 div {
-    display: inline-block;
-    
+    display: flex;
+    justify-content: space-between;
 }
 
 .black-piece{
@@ -98,29 +94,20 @@ div {
 }
 
 @media screen and (max-width: 560px) {
-    td {
-        width: 12vw;
-        height: 12vw;
-    }
-    th {
-        width: 12vw;
-        height: 12vw;
-    }
-    
     .white-piece {
         height: 4.5vw;
         width: 4.5vw;
-        size: 4.5vw;
     }
 
     .black-piece {
         height: 4.5vw;
         width: 4.5vw;
-        size: 4.5vw;
     }
 
-    
-    
+    td {
+        width: 12vw;
+        height: 12vw;
+    }
 
     .white-turn-text {
         font-size: 40px;
@@ -142,7 +129,13 @@ div {
         display: none;
     }
 
-    
+    .white-turn-text {
+        -webkit-transform:rotate(-180deg);
+        -moz-transform:rotate(-180deg);
+        -o-transform:rotate(-180deg);
+        transform:rotate(-180deg);
+        filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=2);    
+    }
 }
 
 @media screen and (max-width: 380px) {
@@ -154,37 +147,5 @@ div {
     .black-piece {
         height: 3vw;
         width: 3vw;
-    }
-}
-
-@media screen and (max-width: 345px) {
-    .white-piece {
-        height: 2.5vw;
-        width: 2.5vw;
-    }
-
-    .black-piece {
-        height: 2.5vw;
-        width: 2.5vw;
-    }
-}
-
-@media screen and (max-width: 300px) {
-    .white-piece {
-        height: 1.5vw;
-        width: 1.5vw;
-    }
-
-    .black-piece {
-        height: 1.5vw;
-        width: 1.5vw;
-    }
-
-    .white-turn-text {
-        font-size: 35px;
-    }
-    
-    .black-turn-text {
-        font-size: 35px;
     }
 }
